# Chemobias

./: .copier-answers.yml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  references.md
.github/workflows/: ci.yml
notebooks/: example.ipynb
src/Chemobias/: __init__.py  _typing.py  highlevel.py  io.py  metrics.py  simulation.py  util.py  visualization.py
src/Chemobias/data/: __init__.py  animal_feed.xlsx  cgl.xlsx  cocoa_beans.xlsx  gasoline.xlsx  wheat.xlsx
